# NexumDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LOGGING.md  README.md  ROADMAP.md  TESTING.md  docker-compose.yaml  reproduce_issue.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autolabeler.yml  ci.yml  codeql.yml  dco.yml  dependency-review.yml  docker-release.yml  pr-commenter.yml  pr-conflicts.yml  pr-quality.yml  pr-review-reminder.yml  release-please.yml  sbom.yml  stale.yml
cache/: semantic_cache.json
docs/: EXPLAIN_FEATURE.md
examples/: cache_persistence_demo.py
nexum_ai/: .coverage  .gitignore  cost_model.py  coverage.xml  model_manager.py  optimizer.py  requirements-lock.txt  rl_agent.py  stats.py  test_optimizer.py  translator.py
nexum_ai/tests/: test_cache_integration.py  test_expensive_ops.py  test_explain.py  test_explain_integration.py  test_model_manager.py  test_optimizer.py  test_rl_agent.py  test_translator.py
nexum_cli/: Cargo.toml
nexum_cli/src/: main.rs
nexum_core/: Cargo.toml  run_benchmarks.sh
nexum_core/benches/: README.md  db_comparison.rs  executor_bench.rs  filter_bench.rs  sql_bench.rs  storage_bench.rs  visualize.py
nexum_core/src/: lib.rs
nexum_core/src/bridge/: error.rs  mod.rs
nexum_core/src/cache/: mod.rs
nexum_core/src/catalog/: mod.rs
nexum_core/src/executor/: filter.rs  mod.rs
nexum_core/src/sql/: parser.rs  planner.rs  types.rs
nexum_core/src/storage/: engine.rs  error.rs  mod.rs
scripts/: check_junk_files.sh
tests/: aggregate_test.rs  integration_test.rs  test_coderabbit_verification.py
