[workspace]
members = ["nexum_core", "nexum_cli", "tests"]
resolver = "2"

[workspace.dependencies]
sled = "0.34"
sqlparser = "0.39"
pyo3 = { version = "0.24", features = ["auto-initialize"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
