[workspace]
members = ["nexum_core", "nexum_cli", "tests"]
resolver = "2"

[workspace.dependencies]
sled = "0.34"
sqlparser = "0.61"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
