[workspace]
members = ["nexum_core", "nexum_cli", "tests"]
resolver = "2"

[workspace.dependencies]
sled = "0.34"
sqlparser = "0.62"
pyo3 = { version = "0.29", features = ["auto-initialize"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
