[package]
name = "nexum_cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "nexum"
path = "src/main.rs"

[dependencies]
nexum_core = { path = "../nexum_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
